Configure and setup facebook strategy.

--- a/index.html
+++ b/index.html
@@ -11,4 +11,11 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script type="text/javascript">
+    if (window.location.hash == '#_=_'){
+      history.replaceState
+          ? history.replaceState(null, null, window.location.href.split('#')[0])
+          : window.location.hash = '';
+    }
+  </script>
 </html>
